--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>que Doar a vida pelo Irmão.</h2>
     <br>
     <h3>Homem nao Chora</h3>
+    <h3>Cada volta eh um novo recomesso!</h3>
 </body>
 </html>
